--- a/App.config
+++ b/App.config
@@ -11,7 +11,7 @@
                 <value>True</value>
             </setting>
             <setting name="Input" serializeAs="String">
-                <value />
+                <value>C:\</value>
             </setting>
             <setting name="OutputSuffix" serializeAs="String">
                 <value>_waifu</value>
@@ -27,6 +27,9 @@
             </setting>
             <setting name="Width" serializeAs="String">
                 <value>800</value>
+            </setting>
+            <setting name="Grayscale" serializeAs="String">
+                <value>False</value>
             </setting>
         </Waifu2x.Settings>
     </userSettings>
