Move form to subfolder

--- a/Waifu2x.csproj
+++ b/Waifu2x.csproj
@@ -15,6 +15,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Update="Forms\WaifuForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
 
   <ItemGroup>
