Add TTA Mode and Thread Count selection

--- a/App.config
+++ b/App.config
@@ -34,6 +34,18 @@
             <setting name="Height" serializeAs="String">
                 <value>850</value>
             </setting>
+            <setting name="TTA" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Decode" serializeAs="String">
+                <value>2</value>
+            </setting>
+            <setting name="Upscale" serializeAs="String">
+                <value>2</value>
+            </setting>
+            <setting name="Encode" serializeAs="String">
+                <value>2</value>
+            </setting>
         </Waifu2x.Settings>
     </userSettings>
 </configuration>
