--- a/Settings.settings
+++ b/Settings.settings
@@ -29,6 +29,18 @@
     <Setting Name="Height" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">850</Value>
     </Setting>
+    <Setting Name="TTA" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="Decode" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
+    <Setting Name="Upscale" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
+    <Setting Name="Encode" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
 
