--- a/Avalonia/Waifu2x.Core/Waifu2x.Core.csproj
+++ b/Avalonia/Waifu2x.Core/Waifu2x.Core.csproj
@@ -4,6 +4,13 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyVersion>0.1.*</AssemblyVersion>
+        <FileVersion>0.1.0.0</FileVersion>
+        <Deterministic>false</Deterministic>
+    </PropertyGroup>
+
+    <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
+      <DebugType>none</DebugType>
     </PropertyGroup>
 
     <ItemGroup>
