--- a/Waifu2x.App/Waifu2x.App.csproj
+++ b/Waifu2x.App/Waifu2x.App.csproj
@@ -9,6 +9,7 @@
         <LangVersion>preview</LangVersion>
         <RootNamespace>Waifu2x</RootNamespace>
         <PackageId>Waifu2x.App</PackageId>
+        <RuntimeIdentifiers>win-x64;osx-x64;osx-arm64;linux-x64</RuntimeIdentifiers>
         <ApplicationIcon>Assets\atriangy.ico</ApplicationIcon>
         <AssemblyVersion>0.1.*</AssemblyVersion>
         <FileVersion>0.1.0.0</FileVersion>
@@ -41,6 +42,7 @@
         <PackageReference Include="Magick.NET-Q8-AnyCPU" Version="14.2.0" />
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
         <PackageReference Include="System.Configuration.ConfigurationManager" Version="9.0.0" />
+        <PackageReference Include="System.Private.Uri" Version="4.3.2" />
     </ItemGroup>
 
     <ItemGroup>
