--- a/Waifu2x.App/Waifu2x.App.csproj
+++ b/Waifu2x.App/Waifu2x.App.csproj
@@ -2,6 +2,8 @@
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
+        <PublishSingleFile>true</PublishSingleFile>
+        <SelfContained>true</SelfContained>
         <Nullable>enable</Nullable>
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
         <ApplicationManifest>app.manifest</ApplicationManifest>
@@ -11,13 +13,20 @@
         <PackageId>Waifu2x.App</PackageId>
         <RuntimeIdentifiers>win-x64;osx-x64;osx-arm64;linux-x64</RuntimeIdentifiers>
         <ApplicationIcon>Assets\atriangy.ico</ApplicationIcon>
-        <AssemblyVersion>0.1.*</AssemblyVersion>
-        <FileVersion>0.1.0.0</FileVersion>
+        <AssemblyVersion>1.0.*</AssemblyVersion>
+        <FileVersion>1.0.0.0</FileVersion>
         <Deterministic>false</Deterministic>
         <AssemblyName>Waifu2x</AssemblyName>
+        <Configurations>Debug;Release</Configurations>
+        <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
       <DebugType>none</DebugType>
+      <PlatformTarget>AnyCPU</PlatformTarget>
+    </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+      <PlatformTarget>AnyCPU</PlatformTarget>
+      <DefineConstants>TRACE</DefineConstants>
     </PropertyGroup>
 
     <ItemGroup>
@@ -68,11 +77,5 @@
         <Generator>SettingsSingleFileGenerator</Generator>
         <LastGenOutput>Settings.Designer.cs</LastGenOutput>
       </None>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Content Include="dist\**">
-            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-        </Content>
     </ItemGroup>
 </Project>
