--- a/Waifu2x.Core/Waifu2x.Core.csproj
+++ b/Waifu2x.Core/Waifu2x.Core.csproj
@@ -4,10 +4,12 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <AssemblyVersion>0.1.*</AssemblyVersion>
-        <FileVersion>0.1.0.0</FileVersion>
+        <AssemblyVersion>1.0.*</AssemblyVersion>
+        <FileVersion>1.0.0.0</FileVersion>
         <Deterministic>false</Deterministic>
         <RuntimeIdentifiers>win-x64;osx-x64;osx-arm64;linux-x64</RuntimeIdentifiers>
+        <Configurations>Debug;Release</Configurations>
+        <Platforms>AnyCPU</Platforms>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
